# downloader

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
example/: bili_api.py  bili_info.json  bili_play_info.json  bili_state_info.json  bili_video_info.json  inc_ver_tauri.py  url_download.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  main.rs  task.rs  tracing_helper.rs  utils.rs
src-tauri/src/config/: encrypt.rs  error.rs  mod.rs
src-tauri/src/model/: error.rs  mod.rs  task_bmc.rs
src-tauri/src/task/: bilibili.rs  error.rs  info.rs  mod.rs  parser.rs  pixiv.rs  task.rs  task_actor.rs
src-tauri/src/utils/: error.rs  mod.rs  utils.rs
src/app/: layout.tsx  page.tsx
src/app/@modal/: default.tsx
src/app/@modal/(.)config/: page.tsx
src/app/@modal/(.)newTask/: page.tsx
src/app/@modal/(.)taskList/: page.tsx
src/app/@modal/newTask/: page.tsx
src/app/config/: page.tsx
src/app/newTask/: page.tsx
src/app/taskList/: page.tsx
src/components/: BtnInvoke.tsx  BtnLink.tsx  btn-invoke.tsx  config-form.tsx  configForm.tsx  configIcon.tsx  home-btn.tsx  homeBtn.tsx  input-c.tsx  input.tsx  modal-c.tsx  modal.tsx  new-task-bar.tsx  newTaskBar.tsx  progress.tsx  task-card.tsx  task-list.tsx  taskCard.tsx  taskList.tsx
src/utils/: echo.ts
