[workspace]
members = [ "src-tauri",]
resolver = "2"

[workspace.package]
name = "downloader"
version = "0.3.0"
description = ""
authors = [ "Louis <836250617@qq.com>",]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.70"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 3
