[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = [] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["gzip"] }
snafu = "0.7.5"
url = "2.4.1"
config = "0.13.3"
tempdir = "0.3.7"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
